--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -51,7 +51,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#### **1. Gathering the twitter_archive_enhanced.csv data**"
+        "### **1. Gathering the twitter_archive_enhanced.csv data**"
       ],
       "metadata": {
         "id": "uabUWTrO1PeI"
@@ -423,17 +423,19 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "mbk6T025EhqK"
-      },
       "source": [
-        "2. Use the Requests library to download the tweet image prediction (image_predictions.tsv)"
-      ]
+        "\n",
+        "\n",
+        "---\n"
+      ],
+      "metadata": {
+        "id": "_Gy-nlOfeAV_"
+      }
     },
     {
       "cell_type": "markdown",
       "source": [
-        "#### **2. Gathering the tweet image prediction data (image_prediction.tsv)**"
+        "### **2. Gathering the tweet image predictions data (image_prediction.tsv) using Requests library**\n"
       ],
       "metadata": {
         "id": "6PfUVrrg4jfs"
@@ -447,7 +449,7 @@
       },
       "outputs": [],
       "source": [
-        "# Importing the necessary librariess\n",
+        "# Importing the necessary libraries\n",
         "import requests\n",
         "import os"
       ]
@@ -490,7 +492,7 @@
         "# Checking the data contents we've gathered from the image_predictions_url\n",
         "response.content\n",
         "\n",
-        "#the contents' output is in bytes format"
+        "# the contents' output is in bytes format"
       ],
       "metadata": {
         "colab": {
@@ -533,7 +535,7 @@
       "cell_type": "code",
       "source": [
         "# loading the image-predictions.tsv file and printing it as pandas dataframe\n",
-        "# to see if it's correctly downloaded\n",
+        "# to see if it's correct and readable in the tsv format\n",
         "\n",
         "pathDataset2 = '/content/image_prediction_folder/image-predictions.tsv'\n",
         "df2 = pd.read_csv(pathDataset2)\n",
@@ -694,6 +696,17 @@
     },
     {
       "cell_type": "markdown",
+      "source": [
+        "\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "WasTXHO7eGa1"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "metadata": {
         "id": "8_PE3Ry7EhqL"
       },
@@ -703,12 +716,128 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
       "metadata": {
-        "id": "yVvNed8GEhqL"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "XgU4g3mEHKSF",
+        "outputId": "4804631b-a43e-471c-f694-07c435d550cd"
       },
-      "outputs": [],
-      "source": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### **3. Gathering data from Twitter API (tweet_json.txt) using the Tweepy library**"
+      ],
+      "metadata": {
+        "id": "M2YtxuKUeSAU"
+      }
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "id": "yVvNed8GEhqL",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "290eab43-1164-4d75-8eff-3625708f556c"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Requirement already satisfied: tweepy in /usr/local/lib/python3.7/dist-packages (3.10.0)\n",
+            "Requirement already satisfied: requests[socks]>=2.11.1 in /usr/local/lib/python3.7/dist-packages (from tweepy) (2.23.0)\n",
+            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.3.1)\n",
+            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.15.0)\n",
+            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->tweepy) (3.2.0)\n",
+            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.24.3)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2022.6.15)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (3.0.4)\n",
+            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2.10)\n",
+            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.7.1)\n"
+          ]
+        }
+      ],
+      "source": [
+        "#Installing dependencies\n",
+        "\n",
+        "!pip install tweepy"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# I created a configuration file to prevent sharing the Twitter credentials\n",
+        "# importing tweepy package\n",
+        "import tweepy \n",
+        "import configparser"
+      ],
+      "metadata": {
+        "id": "tYWjnyWdIeB6"
+      },
+      "execution_count": 4,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# reading the credentials from the configurations\n",
+        "config = configparser.ConfigParser()\n",
+        "config.read('config.ini')\n",
+        "\n",
+        "consumer_key = config['twitter']['api_key']\n",
+        "consumer_secret = config['twitter']['api_key_secret']\n",
+        "\n",
+        "access_token = config['twitter']['access_token']\n",
+        "access_secret = config['twitter']['access_token_secret']\n",
+        "\n",
+        "# Connecting to the twitter API and authentication\n",
+        "auth = tweepy.OAuthHandler(consumer_key, consumer_secret)\n",
+        "auth.set_access_token(access_token, access_secret)\n",
+        "\n",
+        "api = tweepy.API(auth)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 356
+        },
+        "id": "k_WHm0iTHEer",
+        "outputId": "3b94b01a-699f-4a44-ab75-e368df5afb5a"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-5620318fe8be>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'config.ini'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mconsumer_key\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'twitter'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'api_key'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mconsumer_secret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfig\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'twitter'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'api_key_secret'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.7/configparser.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    956\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__getitem__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    957\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mkey\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdefault_section\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhas_section\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 958\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    959\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_proxies\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    960\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'twitter'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -745,6 +874,13 @@
         "* You do not need to gather the tweets beyond August 1st, 2017. You can, but note that you won't be able to gather the image predictions for these tweets since you don't have access to the algorithm used.\n",
         "\n"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [],
+      "metadata": {
+        "id": "SkgXCAv2GNaf"
+      }
     },
     {
       "cell_type": "code",
