--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -59,7 +59,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 20,
       "metadata": {
         "extensions": {
           "jupyter_dashboards": {
@@ -97,9 +97,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QeRdEg4Cx3n5",
-        "outputId": "d5f78ed7-8f54-49c8-be29-f06936b7fd39"
+        "outputId": "95efddae-96c0-496d-e3f7-b9c2ce4291fe"
       },
-      "execution_count": 5,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -119,7 +119,7 @@
       "metadata": {
         "id": "06lNBgSuxi4q"
       },
-      "execution_count": 6,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -137,9 +137,9 @@
           "height": 635
         },
         "id": "K6b9KUXt0aoV",
-        "outputId": "ed553f37-3ae6-4712-fc13-9a5aaac80392"
+        "outputId": "a0129ea1-82eb-41e1-d19c-5d5f727fff1d"
       },
-      "execution_count": 7,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +196,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-e3dc5644-5368-40af-b7f3-86456026c426\">\n",
+              "  <div id=\"df-7a65d8c2-63b2-4190-9ddd-e89ff2e232ab\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -339,7 +339,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-e3dc5644-5368-40af-b7f3-86456026c426')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7a65d8c2-63b2-4190-9ddd-e89ff2e232ab')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -390,12 +390,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-e3dc5644-5368-40af-b7f3-86456026c426 button.colab-df-convert');\n",
+              "          document.querySelector('#df-7a65d8c2-63b2-4190-9ddd-e89ff2e232ab button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-e3dc5644-5368-40af-b7f3-86456026c426');\n",
+              "          const element = document.querySelector('#df-7a65d8c2-63b2-4190-9ddd-e89ff2e232ab');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -418,7 +418,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 7
+          "execution_count": 22
         }
       ]
     },
@@ -444,7 +444,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "id": "kMi_BChfEhqK"
       },
@@ -468,7 +468,7 @@
       "metadata": {
         "id": "vAjEVr7g5sj2"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -484,7 +484,7 @@
       "metadata": {
         "id": "GchFC_pkOHDz"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -500,9 +500,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A0zBEN9nScOZ",
-        "outputId": "dd626d06-59ed-47d6-901a-7350ef6a56a0"
+        "outputId": "8677d657-230e-4a47-e4e2-91dfb493fcb8"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,7 +512,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 11
+          "execution_count": 38
         }
       ]
     },
@@ -529,7 +529,7 @@
       "metadata": {
         "id": "700ffITYT224"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,9 +548,9 @@
           "height": 206
         },
         "id": "Eg2NztC_Z9gk",
-        "outputId": "9095f73d-7722-40ce-89ab-83d85d2b26be"
+        "outputId": "49e62032-1e6a-4292-9acb-2abdb32ceff7"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +565,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-4bc65d59-f438-493a-9957-a83827e7f1e7\">\n",
+              "  <div id=\"df-fd8ab981-ece5-44e1-9770-1ed875ffb186\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -612,7 +612,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-4bc65d59-f438-493a-9957-a83827e7f1e7')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd8ab981-ece5-44e1-9770-1ed875ffb186')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -663,12 +663,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-4bc65d59-f438-493a-9957-a83827e7f1e7 button.colab-df-convert');\n",
+              "          document.querySelector('#df-fd8ab981-ece5-44e1-9770-1ed875ffb186 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-4bc65d59-f438-493a-9957-a83827e7f1e7');\n",
+              "          const element = document.querySelector('#df-fd8ab981-ece5-44e1-9770-1ed875ffb186');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -691,7 +691,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 40
         }
       ]
     },
@@ -726,15 +726,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XgU4g3mEHKSF",
-        "outputId": "4804631b-a43e-471c-f694-07c435d550cd"
+        "outputId": "246df92c-27ee-46a8-d156-3f2e88a8ba28"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -747,133 +747,6 @@
       "metadata": {
         "id": "M2YtxuKUeSAU"
       }
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 1,
-      "metadata": {
-        "id": "yVvNed8GEhqL",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "290eab43-1164-4d75-8eff-3625708f556c"
-      },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Requirement already satisfied: tweepy in /usr/local/lib/python3.7/dist-packages (3.10.0)\n",
-            "Requirement already satisfied: requests[socks]>=2.11.1 in /usr/local/lib/python3.7/dist-packages (from tweepy) (2.23.0)\n",
-            "Requirement already satisfied: requests-oauthlib>=0.7.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.3.1)\n",
-            "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.15.0)\n",
-            "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->tweepy) (3.2.0)\n",
-            "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2022.6.15)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (3.0.4)\n",
-            "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2.10)\n",
-            "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.7.1)\n"
-          ]
-        }
-      ],
-      "source": [
-        "#Installing dependencies\n",
-        "!pip install tweepy"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# importing the librabries\n",
-        "import tweepy as tw\n",
-        "from textblob import TextBlob \n",
-        "from wordcloud import WordCloud\n",
-        "import re\n",
-        "import matplotlib.pyplot as plt\n",
-        "plt.style.use('fivethirtyeight')"
-      ],
-      "metadata": {
-        "id": "tYWjnyWdIeB6"
-      },
-      "execution_count": 13,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# uploading the keys file\n",
-        "from google.colab import files\n",
-        "uploaded = files.upload()"
-      ],
-      "metadata": {
-        "id": "1eElY-_ubhAg"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# loading the logins file\n",
-        "logins = pd.read_csv('Logins.csv')"
-      ],
-      "metadata": {
-        "id": "bmc8SREtgFpp"
-      },
-      "execution_count": 14,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# getting the twitter API credentials\n",
-        "consumer_Key = logins['key'][0]\n",
-        "consumer_Secret = logins['key'][1]\n",
-        "access_Token = logins['key'][2]\n",
-        "access_TokenSecret = logins['key'][3]"
-      ],
-      "metadata": {
-        "id": "fLfHM36hgZN_"
-      },
-      "execution_count": 15,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Creating the Authentication Object\n",
-        "authenticate = tw.OAuthHandler(consumer_Key, consumer_Secret)\n",
-        "\n",
-        "# Setting the access token and the access token secret\n",
-        "authenticate.set_access_token(access_Token, access_TokenSecret)"
-      ],
-      "metadata": {
-        "id": "zcNzQfbcj-b3"
-      },
-      "execution_count": 16,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "# Creating the API object while passing in the authentication information\n",
-        "api = tw.API(authenticate, wait_on_rate_limit=True)"
-      ],
-      "metadata": {
-        "id": "wjKBB7IKl3gD"
-      },
-      "execution_count": 17,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "SujpxSctmoOm"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
