Gathering data completed, Assessing data up next

--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -43,9 +43,7 @@
         "id": "7pSpskYNEhqI"
       },
       "source": [
-        "## Data Gathering\n",
-        "In the cell below, gather **all** three pieces of data for this project and load them in the notebook. **Note:** the methods required to gather each data are different.\n",
-        "1. Directly download the WeRateDogs Twitter archive data (twitter_archive_enhanced.csv)"
+        "## Data Gathering\n"
       ]
     },
     {
@@ -59,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": 2,
       "metadata": {
         "extensions": {
           "jupyter_dashboards": {
@@ -97,7 +95,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QeRdEg4Cx3n5",
-        "outputId": "95efddae-96c0-496d-e3f7-b9c2ce4291fe"
+        "outputId": "72ebdb35-0974-4336-9c0b-cd7e28b71373"
       },
       "execution_count": 3,
       "outputs": [
@@ -105,7 +103,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -119,7 +117,7 @@
       "metadata": {
         "id": "06lNBgSuxi4q"
       },
-      "execution_count": 21,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -128,8 +126,8 @@
         "# Reading the loaded Twitter_archive_enhanced.csv dataset as a Pandas dataframe\n",
         "# and printing out the dataframe's head part to check if it's correctl\n",
         "\n",
-        "df = pd.read_csv(pathDataset)\n",
-        "df.head()"
+        "df1 = pd.read_csv(pathDataset)\n",
+        "df1.head()"
       ],
       "metadata": {
         "colab": {
@@ -137,9 +135,9 @@
           "height": 635
         },
         "id": "K6b9KUXt0aoV",
-        "outputId": "a0129ea1-82eb-41e1-d19c-5d5f727fff1d"
+        "outputId": "a68f2045-1854-427f-f23a-f967ee21ce2f"
       },
-      "execution_count": 22,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -196,7 +194,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-7a65d8c2-63b2-4190-9ddd-e89ff2e232ab\">\n",
+              "  <div id=\"df-148daf42-8abe-463b-b74d-c2ef3f52d94e\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -339,7 +337,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-7a65d8c2-63b2-4190-9ddd-e89ff2e232ab')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-148daf42-8abe-463b-b74d-c2ef3f52d94e')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -390,12 +388,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-7a65d8c2-63b2-4190-9ddd-e89ff2e232ab button.colab-df-convert');\n",
+              "          document.querySelector('#df-148daf42-8abe-463b-b74d-c2ef3f52d94e button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-7a65d8c2-63b2-4190-9ddd-e89ff2e232ab');\n",
+              "          const element = document.querySelector('#df-148daf42-8abe-463b-b74d-c2ef3f52d94e');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -418,7 +416,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 22
+          "execution_count": 5
         }
       ]
     },
@@ -444,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "kMi_BChfEhqK"
       },
@@ -468,7 +466,7 @@
       "metadata": {
         "id": "vAjEVr7g5sj2"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -484,7 +482,7 @@
       "metadata": {
         "id": "GchFC_pkOHDz"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -500,9 +498,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "A0zBEN9nScOZ",
-        "outputId": "8677d657-230e-4a47-e4e2-91dfb493fcb8"
+        "outputId": "4e087c96-e170-45a1-ce6f-de4d4083ea76"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -512,7 +510,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 38
+          "execution_count": 9
         }
       ]
     },
@@ -529,13 +527,13 @@
       "metadata": {
         "id": "700ffITYT224"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "# loading the image-predictions.tsv file and printing it as pandas dataframe\n",
+        "# loading the image-predictions.tsv file and printing it as pandas dataframe (df2)\n",
         "# to see if it's correct and readable in the tsv format\n",
         "\n",
         "pathDataset2 = '/content/image_prediction_folder/image-predictions.tsv'\n",
@@ -548,9 +546,9 @@
           "height": 206
         },
         "id": "Eg2NztC_Z9gk",
-        "outputId": "49e62032-1e6a-4292-9acb-2abdb32ceff7"
+        "outputId": "5a8d1418-5c99-476f-8ff5-17e37cf7febd"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -565,7 +563,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-fd8ab981-ece5-44e1-9770-1ed875ffb186\">\n",
+              "  <div id=\"df-1d801165-2c41-446f-8a94-49bc587b9d66\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -612,7 +610,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-fd8ab981-ece5-44e1-9770-1ed875ffb186')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1d801165-2c41-446f-8a94-49bc587b9d66')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -663,12 +661,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-fd8ab981-ece5-44e1-9770-1ed875ffb186 button.colab-df-convert');\n",
+              "          document.querySelector('#df-1d801165-2c41-446f-8a94-49bc587b9d66 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-fd8ab981-ece5-44e1-9770-1ed875ffb186');\n",
+              "          const element = document.querySelector('#df-1d801165-2c41-446f-8a94-49bc587b9d66');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -691,7 +689,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 40
+          "execution_count": 11
         }
       ]
     },
@@ -728,7 +726,7 @@
     {
       "cell_type": "code",
       "source": [
-        "# Uploading the tweet-json.txt to the worksapce\n",
+        "# Uploading the tweets-json.txt file to the worksapce\n",
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
@@ -752,9 +750,9 @@
           "height": 73
         },
         "id": "XgU4g3mEHKSF",
-        "outputId": "4c58a8fc-4fc5-4bac-9d23-7c8dd15122ab"
+        "outputId": "de5e8007-87a7-4966-d9e9-9e5853acd410"
       },
-      "execution_count": 51,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -764,9 +762,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-428ee020-787f-4034-a8a4-99def01f63e6\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-8612aee4-eaa4-4221-9780-b793ef712aa5\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-428ee020-787f-4034-a8a4-99def01f63e6\">\n",
+              "     <output id=\"result-8612aee4-eaa4-4221-9780-b793ef712aa5\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -786,13 +784,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 49,
+      "execution_count": 13,
       "metadata": {
         "id": "yVvNed8GEhqL",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "092cf045-5f7e-491b-f908-8f623cd33582"
+        "outputId": "658ce04c-abe0-4699-93aa-16675f8998dc"
       },
       "outputs": [
         {
@@ -805,39 +803,51 @@
             "Requirement already satisfied: six>=1.10.0 in /usr/local/lib/python3.7/dist-packages (from tweepy) (1.15.0)\n",
             "Requirement already satisfied: requests[socks]>=2.11.1 in /usr/local/lib/python3.7/dist-packages (from tweepy) (2.23.0)\n",
             "Requirement already satisfied: oauthlib>=3.0.0 in /usr/local/lib/python3.7/dist-packages (from requests-oauthlib>=0.7.0->tweepy) (3.2.0)\n",
-            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (3.0.4)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2022.6.15)\n",
             "Requirement already satisfied: idna<3,>=2.5 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2.10)\n",
             "Requirement already satisfied: urllib3!=1.25.0,!=1.25.1,<1.26,>=1.21.1 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.24.3)\n",
-            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (2022.6.15)\n",
+            "Requirement already satisfied: chardet<4,>=3.0.2 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (3.0.4)\n",
             "Requirement already satisfied: PySocks!=1.5.7,>=1.5.6 in /usr/local/lib/python3.7/dist-packages (from requests[socks]>=2.11.1->tweepy) (1.7.1)\n"
           ]
         }
       ],
       "source": [
-        "#Installing dependencies\n",
+        "#Installing tweepy library\n",
         "! pip install tweepy"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# importing the librabries\n",
+        "# importing other necessary librabries\n",
         "import tweepy\n",
         "from tweepy import OAuthHandler\n",
         "import json\n",
         "from timeit import default_timer as timer\n",
         "\n",
-        "tweets_list=[]\n",
-        "with open('/content/tweets-json.txt') as jsonfile:\n",
-        "    for line in jsonfile:\n",
-        "        tweet=json.loads(line)\n",
-        "        tweet_id=tweet['id']\n",
-        "        retweet_count=tweet['retweet_count']\n",
-        "        favorite_count=tweet['favorite_count']\n",
-        "        tweets_list.append({'tweet_id':tweet_id,'retweet_count':retweet_count,'favorite_count':favorite_count})\n",
+        "#1 Creating a list\n",
+        "#2 Opening the tweets-json.txt file\n",
+        "#3 Reading the file line by line\n",
+        "#4 Using json.loads() methods to parse the lines read (valid JSON string) and convert \n",
+        "#  the selected columns e.g 'id' and 'retweet_count' into Python Dictionaries i.e \n",
+        "#  tweet_id and retweet_count\n",
+        "#5 Using append() method to add new items in the list created initially. The added items  \n",
+        "#  are obtained from the Python dictionaries that were created\n",
         "\n",
-        "df_new=pd.DataFrame(tweets_list,columns=['tweet_id','retweet_count','favorite_count'])\n",
-        "df_new.head()"
+        "\n",
+        "tweets_list=[] #1\n",
+        "with open('/content/tweets-json.txt') as jsonfile: #2\n",
+        "    for line in jsonfile:  #3       \n",
+        "        tweet=json.loads(line) #4   \n",
+        "        tweet_id=tweet['id']   #dictionary created \n",
+        "        retweet_count=tweet['retweet_count']  #dictionary created\n",
+        "        favorite_count=tweet['favorite_count']   #dictionary created\n",
+        "        tweets_list.append({'tweet_id':tweet_id,'retweet_count':retweet_count,'favorite_count':favorite_count}) #5\n",
+        "\n",
+        "# Creating a new pandas data frame (df3) from the tweets list and adding columns to it e.g tweet_id \n",
+        "# and printing out df3 head section\n",
+        "df3=pd.DataFrame(tweets_list,columns=['tweet_id','retweet_count','favorite_count'])\n",
+        "df3.head()"
       ],
       "metadata": {
         "colab": {
@@ -847,7 +857,7 @@
         "id": "gJK1ycgslXLJ",
         "outputId": "65f031b1-6c5a-4817-b213-47c10be41bab"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1003,6 +1013,29 @@
           "execution_count": 54
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Three different data has been gathered from using different methods as illustrated in the Data gathering phase above. These different data collected have been used to create different dataframes namely **df1**, **df2**, and **df3**. \n",
+        "\n",
+        "> **df1** - dataframe created from twitter-archive-enhanced.csv \n",
+        "\n",
+        "\n",
+        "> **df2** - dataframe created from image-predictions.tsv\n",
+        "\n",
+        "\n",
+        "> **df3** - dataframe created from tweets-json.txt by creating a list of dictionaries\n",
+        "\n",
+        "The three dataframes storing different data will be used in the Assessing Data phase.\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n"
+      ],
+      "metadata": {
+        "id": "qZkfziyurVnb"
+      }
     },
     {
       "cell_type": "markdown",
