--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -57,7 +57,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 40,
+      "execution_count": null,
       "metadata": {
         "extensions": {
           "jupyter_dashboards": {
@@ -97,7 +97,7 @@
         "id": "QeRdEg4Cx3n5",
         "outputId": "b762df2e-0c5e-4b69-cbb0-c6c031589b59"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
       "metadata": {
         "id": "06lNBgSuxi4q"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
         "id": "K6b9KUXt0aoV",
         "outputId": "9a88f138-87e7-4ae4-b84e-9faf0fdc6f2b"
       },
-      "execution_count": 43,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -442,7 +442,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 44,
+      "execution_count": null,
       "metadata": {
         "id": "kMi_BChfEhqK"
       },
@@ -466,7 +466,7 @@
       "metadata": {
         "id": "vAjEVr7g5sj2"
       },
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -482,7 +482,7 @@
       "metadata": {
         "id": "GchFC_pkOHDz"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -500,7 +500,7 @@
         "id": "A0zBEN9nScOZ",
         "outputId": "91ff0361-f4a4-4805-ae2e-f6779b6a3c7a"
       },
-      "execution_count": 47,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -527,7 +527,7 @@
       "metadata": {
         "id": "700ffITYT224"
       },
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -548,7 +548,7 @@
         "id": "Eg2NztC_Z9gk",
         "outputId": "03f9f8cc-a3b6-4b31-827d-f9982fd57568"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -725,7 +725,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 50,
+      "execution_count": null,
       "metadata": {
         "id": "yVvNed8GEhqL",
         "colab": {
@@ -798,7 +798,7 @@
         "id": "gJK1ycgslXLJ",
         "outputId": "7fd01960-394c-4b50-8c65-4885013f5904"
       },
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1029,7 +1029,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**1. Assessing df1 - dataframe from twitter-archive.csv file**"
+        "###**1. Assessing df1 - dataframe from twitter-archive.csv file**"
       ],
       "metadata": {
         "id": "SkgXCAv2GNaf"
@@ -1048,7 +1048,7 @@
         "id": "fVpUmtaIjfQ4",
         "outputId": "ed934356-2438-4bd0-f0c3-2101c539cac2"
       },
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1084,7 +1084,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 53,
+      "execution_count": null,
       "metadata": {
         "id": "HbSYY3WeEhqM",
         "colab": {
@@ -1555,7 +1555,7 @@
         "id": "TM6sH21xezBD",
         "outputId": "14c4ffbb-4551-4748-a706-d2dfc63e00dd"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1581,6 +1581,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "###**2. Assessing df2 - data from image-predictions.tsv file**"
+      ],
+      "metadata": {
+        "id": "O6uYq6Jvxwq3"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "df2.info()"
@@ -1592,7 +1601,7 @@
         "id": "aYmhO7JLtp-8",
         "outputId": "d04d5c6c-6c93-4650-eed1-57a41cb543fc"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1623,7 +1632,7 @@
         "id": "FQIiIHCQusOp",
         "outputId": "9c51cb90-22c0-430a-a26f-0450d13d13c8"
       },
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1814,7 +1823,7 @@
         "id": "GlCejcIMu73z",
         "outputId": "3c47de8c-2c8d-4174-9bed-fb9938ab8a44"
       },
-      "execution_count": 58,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1991,6 +2000,48 @@
           "execution_count": 58
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "###**3. Assessing df3 - data from a list of dictionaries creatred from tweets-json.txt**"
+      ],
+      "metadata": {
+        "id": "oroR7bRnyGkY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df3.info()"
+      ],
+      "metadata": {
+        "id": "a5NgAXTZynUO"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df3.sample(6)"
+      ],
+      "metadata": {
+        "id": "eH89PeEQyp34"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df3.describe"
+      ],
+      "metadata": {
+        "id": "m8WUBXOPy16q"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
