--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -1860,22 +1860,24 @@
         }
       ],
       "source": [
+        "#printing a sample of df1\n",
         "df1.sample(20)"
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "df1.duplicated()"
+        "#checking duplicates in df1\n",
+        "df1.tweet_id.duplicated()"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "TM6sH21xezBD",
-        "outputId": "2257d286-99e5-453b-dda2-92e40119a980"
+        "outputId": "05f23d36-40cd-4021-b61c-8817ddb7e0bc"
       },
-      "execution_count": 15,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1892,26 +1894,29 @@
               "2353    False\n",
               "2354    False\n",
               "2355    False\n",
-              "Length: 2356, dtype: bool"
+              "Name: tweet_id, Length: 2356, dtype: bool"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 65
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# To assess consistency of df1 - twitter-archive-enhanced.csv\n",
-        "# I use this function to check if the values in a given column\n",
-        "# i.e 'rating_denominator' are the same: value of '10' \n",
+        "# To assess consistency of columns in df1 - twitter-archive-enhanced.csv\n",
+        "# I use this method to check if the values in a given column\n",
+        "# are unique\n",
         "def is_unique(u):\n",
         "    a = u.to_numpy() # s.values (pandas<0.24)\n",
         "    return (a[0] == a).all()\n",
         "\n",
-        "is_unique(df1['rating_denominator'])\n",
-        "# False"
+        "\n",
+        "# using the is_unique() defined method to find if,\n",
+        "# e.g 'rating_denominator' has unique values \n",
+        "# prints out True or False as answer\n",
+        "is_unique(df1['rating_denominator']) "
       ],
       "metadata": {
         "colab": {
@@ -1939,6 +1944,7 @@
       "source": [
         "# looking for individual entry counts in the 'rating_denominator'\n",
         "# using value.counts() method\n",
+        "\n",
         "df1['rating_denominator'].value_counts()"
       ],
       "metadata": {
@@ -2015,6 +2021,52 @@
           },
           "metadata": {},
           "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# checking the missing values in each column of \n",
+        "# df1 and printing out the total of these missing values if any\n",
+        "\n",
+        "pd.isnull(df1).sum()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EKZt7S3YAvfW",
+        "outputId": "1d041f9a-b66d-4b9c-de0e-fe0a6ef7e7c1"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "tweet_id                         0\n",
+              "in_reply_to_status_id         2278\n",
+              "in_reply_to_user_id           2278\n",
+              "timestamp                        0\n",
+              "source                           0\n",
+              "text                             0\n",
+              "retweeted_status_id           2175\n",
+              "retweeted_status_user_id      2175\n",
+              "retweeted_status_timestamp    2175\n",
+              "expanded_urls                   59\n",
+              "rating_numerator                 0\n",
+              "rating_denominator               0\n",
+              "name                             0\n",
+              "doggo                            0\n",
+              "floofer                          0\n",
+              "pupper                           0\n",
+              "puppo                            0\n",
+              "dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 67
         }
       ]
     },
@@ -2139,6 +2191,33 @@
       ]
     },
     {
+      "cell_type": "code",
+      "source": [
+        "# printing out the number of entries/rows in df1\n",
+        "len(df1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t00ojJSpEfan",
+        "outputId": "80d28769-68b9-4399-d8cd-61b09bdf222c"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2356"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 68
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "source": [
         "###**2. Assessing df2 - data from image-predictions.tsv file**"
@@ -2146,71 +2225,6 @@
       "metadata": {
         "id": "O6uYq6Jvxwq3"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "df2.describe"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "YpQepOH-6Pvf",
-        "outputId": "488a808f-9cbd-409a-db66-67e2ceeca384"
-      },
-      "execution_count": 21,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<bound method NDFrame.describe of                 tweet_id                                          jpg_url  \\\n",
-              "0     666020888022790149  https://pbs.twimg.com/media/CT4udn0WwAA0aMy.jpg   \n",
-              "1     666029285002620928  https://pbs.twimg.com/media/CT42GRgUYAA5iDo.jpg   \n",
-              "2     666033412701032449  https://pbs.twimg.com/media/CT4521TWwAEvMyu.jpg   \n",
-              "3     666044226329800704  https://pbs.twimg.com/media/CT5Dr8HUEAA-lEu.jpg   \n",
-              "4     666049248165822465  https://pbs.twimg.com/media/CT5IQmsXIAAKY4A.jpg   \n",
-              "...                  ...                                              ...   \n",
-              "2070  891327558926688256  https://pbs.twimg.com/media/DF6hr6BUMAAzZgT.jpg   \n",
-              "2071  891689557279858688  https://pbs.twimg.com/media/DF_q7IAWsAEuuN8.jpg   \n",
-              "2072  891815181378084864  https://pbs.twimg.com/media/DGBdLU1WsAANxJ9.jpg   \n",
-              "2073  892177421306343426  https://pbs.twimg.com/media/DGGmoV4XsAAUL6n.jpg   \n",
-              "2074  892420643555336193  https://pbs.twimg.com/media/DGKD1-bXoAAIAUK.jpg   \n",
-              "\n",
-              "      img_num                      p1   p1_conf  p1_dog                  p2  \\\n",
-              "0           1  Welsh_springer_spaniel  0.465074    True              collie   \n",
-              "1           1                 redbone  0.506826    True  miniature_pinscher   \n",
-              "2           1         German_shepherd  0.596461    True            malinois   \n",
-              "3           1     Rhodesian_ridgeback  0.408143    True             redbone   \n",
-              "4           1      miniature_pinscher  0.560311    True          Rottweiler   \n",
-              "...       ...                     ...       ...     ...                 ...   \n",
-              "2070        2                  basset  0.555712    True    English_springer   \n",
-              "2071        1             paper_towel  0.170278   False  Labrador_retriever   \n",
-              "2072        1               Chihuahua  0.716012    True            malamute   \n",
-              "2073        1               Chihuahua  0.323581    True            Pekinese   \n",
-              "2074        1                  orange  0.097049   False               bagel   \n",
-              "\n",
-              "       p2_conf  p2_dog                           p3   p3_conf  p3_dog  \n",
-              "0     0.156665    True            Shetland_sheepdog  0.061428    True  \n",
-              "1     0.074192    True          Rhodesian_ridgeback  0.072010    True  \n",
-              "2     0.138584    True                   bloodhound  0.116197    True  \n",
-              "3     0.360687    True           miniature_pinscher  0.222752    True  \n",
-              "4     0.243682    True                     Doberman  0.154629    True  \n",
-              "...        ...     ...                          ...       ...     ...  \n",
-              "2070  0.225770    True  German_short-haired_pointer  0.175219    True  \n",
-              "2071  0.168086    True                      spatula  0.040836   False  \n",
-              "2072  0.078253    True                       kelpie  0.031379    True  \n",
-              "2073  0.090647    True                     papillon  0.068957    True  \n",
-              "2074  0.085851   False                       banana  0.076110   False  \n",
-              "\n",
-              "[2075 rows x 12 columns]>"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 21
-        }
-      ]
     },
     {
       "cell_type": "code",
@@ -2906,34 +2920,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "df2.diff(['p1_conf'], ['p2_conf'], axis=1)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 165
-        },
-        "id": "eu06Qq5lkTgJ",
-        "outputId": "d4d6cc7e-db7e-4d07-dfdf-3bcb0ddd098f"
-      },
-      "execution_count": 54,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "TypeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-54-111148e02a7b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf2\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdiff\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'p1_conf'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'p2_conf'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mTypeError\u001b[0m: diff() got multiple values for argument 'axis'"
-          ]
-        }
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "###**3. Assessing df3 - data from a list of dictionaries creatred from tweets-json.txt**"
@@ -2945,6 +2931,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# checking df information\n",
         "df3.info()"
       ],
       "metadata": {
@@ -2977,6 +2964,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# printing out df3\n",
         "df3"
       ],
       "metadata": {
@@ -3192,6 +3180,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# printing a sample size of df3\n",
         "df3.sample(20)"
       ],
       "metadata": {
@@ -3467,7 +3456,7 @@
     {
       "cell_type": "code",
       "source": [
-        "#checking for duplicate values\n",
+        "#checking for duplicate values in df3\n",
         "df3.duplicated()"
       ],
       "metadata": {
@@ -3504,12 +3493,31 @@
     },
     {
       "cell_type": "code",
-      "source": [],
+      "source": [
+        "# checking if there are values in 'retweet_count' that are similar\n",
+        "# to those in 'favorite_count'\n",
+        "df3['retweet_count'].equals(df3['favorite_count'])"
+      ],
       "metadata": {
-        "id": "Imzen80xT8e2"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Imzen80xT8e2",
+        "outputId": "610b30d3-6a35-4d1a-bb2a-fcf6e8fbefdd"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 63
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -3520,24 +3528,25 @@
         "### Quality issues\n",
         "\n",
         "#### df1: twitter-archive.csv\n",
-        "1. **5 columns** i.e 'in_reply_to_status_id', 'in_reply_to_user_id',  'retweeted_status_id', 'retweeted_status_user_id' and 'retweeted_status_timestamp' **have missing values** \n",
+        "Out of the **2356** entries in each column of this dataframe:\n",
+        "1. **2278** values in 'in_reply_to_status_id' column are **missing** \n",
         "\n",
-        "2. **Inconsitent data** in the 'rating_denominator' column. Most entries of the denominator are '10' but in other cases (23) they are different e.g '15', '90', '150', '130' e.t.c  \n",
+        "2. The 'retweeted_status_id' column has **2175 missing** values\n",
         "\n",
+        "3. There are **2175 null values** in the 'retweeted_status_user_id' column too \n",
         "\n",
-        "3. Some dogs (745) have no names\n",
+        "4. In the 'retweeted_status_timestamp' column **2175** values are **missing**  \n",
         "\n",
-        "4. Some dogs (55) have been named with letters i.e 'a' which is **incorrect** and **inaccurate** naming.\n",
+        "5. There is **Inconsitent data** in the 'rating_denominator' column. Most (2333) entries of the denominator are '10' but in other cases (23) they are different. Some are '15' '0' '90' '150' '130' '2' '170' e.t.c  \n",
+        "\n",
+        "6. Some dogs (745) have no names\n",
+        "\n",
+        "7. Some dogs (55) have been named with letters i.e 'a' which is **inaccurate** and **incorrect** naming.\n",
+        "\n",
+        "8. The 'in_reply_to_user_id' column has **2278 missing** values\n",
         "\n",
         "#### df2: image-predictions.tsv\n",
-        "5. Some confidence values (p1_conf, p2_conf, p3_conf) are almost similar / have very little difference. This posses a challenge on the breed of dog prediction. \n",
-        "\n",
-        "6.\n",
-        "\n",
-        "#### df3:  \n",
-        "7.\n",
-        "\n",
-        "8."
+        "9. Some confidence values (p1_conf, p2_conf, and p3_conf) are almost similar / have very little difference. This may make a challenge on confidently agreeing the breed of dog prediction. \n"
       ]
     },
     {
