--- a/wrangle_act.ipynb
+++ b/wrangle_act.ipynb
@@ -3573,7 +3573,7 @@
       },
       "source": [
         "### Tidiness issues\n",
-        "1.\n",
+        "1. Some rows in the **df1** column 'name' have an entry 'None' \n",
         "\n",
         "2."
       ]
